--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 	<string name="title_activity_login_screen">Login</string>
 	<!-- Strings related to login -->
 	<string name="prompt_email">Email</string>
-	<string name="prompt_password">Password (optional)</string>
+	<string name="prompt_password">Password</string>
 	<string name="action_login_in">Log in</string>
 	<string name="action_sign_in_short">Sign in</string>
 	<string name="error_invalid_email">This email address is invalid</string>
@@ -14,4 +14,5 @@
 	<string name="permission_rationale">"Contacts permissions are needed for providing email
 		completions."
 	</string>
+	<string name="title_activity_pop_up_screen">PopUpScreenActivity</string>
 </resources>
